feature: adding pop method transactions
